# svgm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/svgm-cli/: Cargo.toml
crates/svgm-cli/src/: config_file.rs  main.rs
crates/svgm-core/: Cargo.toml
crates/svgm-core/benches/: corpus.rs
crates/svgm-core/src/: config.rs  lib.rs  serializer.rs
crates/svgm-core/src/passes/: cleanup_ids.rs  collapse_groups.rs  convert_colors.rs  convert_path_data.rs  convert_shape_to_path.rs  convert_transform.rs  inline_styles.rs  merge_paths.rs  minify_styles.rs  minify_whitespace.rs  mod.rs  remove_unknowns_and_defaults.rs
crates/svgm-core/tests/: integration.rs
crates/svgm-napi/: README.md  index.js  package.json
crates/svgm-napi/__test__/: index.spec.ts
crates/svgm-wasm/: README.md
