[package]
name = "svgm"
description = "SVG minimizer — fast, safe, fixed-point convergence SVG optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["svg", "optimizer", "minifier", "cli", "web"]
categories = ["command-line-utilities", "web-programming"]
readme = "../../README.md"

[[bin]]
name = "svgm"
path = "src/main.rs"

[dependencies]
svgm-core.workspace = true
clap.workspace = true
indicatif.workspace = true
console.workspace = true
